game is in slot (worng slot). also created todo list and project context files

--- a/launcher/build.gradle
+++ b/launcher/build.gradle
@@ -5,6 +5,7 @@ plugins {
 dependencies {
     implementation project(":shared")
     implementation project(":games:template-game")
+    implementation project(":games:mole-game")
 }
 
 application {
